# layer-example

./: README.md  package-lock.json  package.json  package.oo.yaml  pyproject.toml  tsconfig.json
.github/workflows/: layer.yml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +scriptlet#1.py  +scriptlet#1.ts
